--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
             <div class="section__text">
                 <p class="section__text__p1">Hello I'm</p>
                 <h1 class="title">Rizkya Salsabila</h1>
-                <p class="section__text__p2">Data Analyst</p>
+                <p class="section__text__p2">Frontend Developer</p>
                 <div class="btn-container">
                     <button 
                         class="btn btn-color-2" onclick="window.open('./assets/CV-ByRizkyaSalsabila.pdf')" >
