update portofolio - project dan favicon

--- a/index.html
+++ b/index.html
@@ -4,12 +4,12 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE-edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>My Portofolio</title>
+    <title>Portfolio | Rizkya Salsabila</title>
     <link rel="stylesheet" href="style.css" />
     <link rel="stylesheet" href="mediaqueries.css" />
+    <link rel="icon" type="image/png" href="assets/favicon.png" />
   </head>
   <body>
-    
     <nav id="dekstop-nav">
       <div class="logo">Rizkya Salsabila</div>
       <div>
@@ -30,13 +30,13 @@
           <span></span>
           <span></span>
         </div>
-        <div class="menu-links">
+        <ul class="menu-links">
           <li><a href="#profile">Home</a></li>
-          <li><a href="#about" onclick="toggleMenu()">About</a></li>
-          <li><a href="#skills" onclick="toggleMenu()">Skills</a></li>
-          <li><a href="#projects" onclick="toggleMenu()">Projects</a></li>
-          <li><a href="#contact" onclick="toggleMenu()">Contact</a></li>
-        </div>
+          <li><a href="#about">About</a></li>
+          <li><a href="#skills">Skills</a></li>
+          <li><a href="#projects">Projects</a></li>
+          <li><a href="#contact">Contact</a></li>
+        </ul>
       </div>
     </nav>
     <section id="profile">
@@ -47,7 +47,7 @@
         <p class="section__text__p1">Hello I'm</p>
         <h1 class="title">Rizkya Salsabila</h1>
         <p class="section__text__p2">
-          <span id="dynamic-text" class="fade">Web Developer</span>
+          <span id="dynamic-text" class="fade">Software Developer</span>
         </p>
         <div class="btn-container">
           <button
@@ -88,25 +88,6 @@
           />
         </div>
         <div class="about-details-container">
-          <!-- <div class="about-containers">
-            <div class="details-container">
-              <img src="./assets/skills.png" alt="Skills icon" class="icon" />
-              <h3>Projects Completed</h3>
-              <p>
-                4+ Projects <br />Web Development & Data Analysis / Data
-                Scientist
-              </p>
-            </div>
-            <div class="details-container">
-              <img
-                src="./assets/education.png"
-                alt="Education icon"
-                class="icon"
-              />
-              <h3>Current Education</h3>
-              <p>State Polytechnic of Malang</p>
-            </div>
-          </div> -->
           <div class="text-container">
             <p>
               Saya merupakan mahasiswa aktif D4 Teknik Informatika Politeknik
@@ -249,8 +230,8 @@
 
         <!-- Project 3 -->
         <div class="project-card">
-          <img src="assets/view/p1.5.PNG" alt="Todo App" class="project-img" />
-          <h2 class="project-title">Todo App</h2>
+          <img src="assets/view/p3.2.PNG" alt="Todo App" class="project-img" />
+          <h2 class="project-title">Slicing Sales Deisgn</h2>
           <div class="btn-group">
             <button onclick="location.href='projects.html?id=slicingSales'">
               Lihat Detail
