--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
         <ul class="nav-links">
           <li><a href="#profile">Home</a></li>
           <li><a href="#about">About</a></li>
-          <li><a href="#skills">Skills</a></li>
-          <li><a href="#projects">Projects</a></li>
+          <li><a href="#skills">My Skills</a></li>
+          <li><a href="#projects">My Projects</a></li>
           <li><a href="#contact">Contact</a></li>
         </ul>
       </div>
@@ -33,8 +33,8 @@
         <ul class="menu-links">
           <li><a href="#profile">Home</a></li>
           <li><a href="#about">About</a></li>
-          <li><a href="#skills">Skills</a></li>
-          <li><a href="#projects">Projects</a></li>
+          <li><a href="#skills">My Skills</a></li>
+          <li><a href="#projects">My Projects</a></li>
           <li><a href="#contact">Contact</a></li>
         </ul>
       </div>
@@ -283,8 +283,8 @@
           <ul class="nav-links">
             <li><a href="#profile">Home</a></li>
             <li><a href="#about">About</a></li>
-            <li><a href="#skills">Skills</a></li>
-            <li><a href="#projects">Projects</a></li>
+            <li><a href="#skills">My Skills</a></li>
+            <li><a href="#projects">My Projects</a></li>
             <li><a href="#contact">Contact</a></li>
           </ul>
         </div>
